@@ -1,6 +1,6 @@
-////////////////////////////////////////////////////////////////////////////////
-// checkstyle: Checks Java source code for adherence to a set of rules.
-// Copyright (C) 2001-2017 the original author or authors.
+///////////////////////////////////////////////////////////////////////////////////////////////
+// checkstyle: Checks Java source code and other text files for adherence to a set of rules.
+// Copyright (C) 2001-2023 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -15,7 +15,7 @@
 // You should have received a copy of the GNU Lesser General Public
 // License along with this library; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////////
 
 package com.puppycrawl.tools.checkstyle.checks.metrics;
 
@@ -30,77 +30,101 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeSet;
+import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import com.puppycrawl.tools.checkstyle.FileStatefulCheck;
 import com.puppycrawl.tools.checkstyle.api.AbstractCheck;
 import com.puppycrawl.tools.checkstyle.api.DetailAST;
 import com.puppycrawl.tools.checkstyle.api.FullIdent;
 import com.puppycrawl.tools.checkstyle.api.TokenTypes;
-import com.puppycrawl.tools.checkstyle.utils.CheckUtils;
-import com.puppycrawl.tools.checkstyle.utils.CommonUtils;
+import com.puppycrawl.tools.checkstyle.utils.CommonUtil;
+import com.puppycrawl.tools.checkstyle.utils.TokenUtil;
 
 /**
  * Base class for coupling calculation.
  *
- * @author <a href="mailto:simon@redhillconsulting.com.au">Simon Harris</a>
- * @author o_sukhodolsky
  */
+@FileStatefulCheck
 public abstract class AbstractClassCouplingCheck extends AbstractCheck {
+
     /** A package separator - "." */
-    private static final String DOT = ".";
+    private static final char DOT = '.';
 
     /** Class names to ignore. */
-    private static final Set<String> DEFAULT_EXCLUDED_CLASSES = Collections.unmodifiableSet(
-        Arrays.stream(new String[] {
-            // primitives
-            "boolean", "byte", "char", "double", "float", "int",
-            "long", "short", "void",
-            // wrappers
-            "Boolean", "Byte", "Character", "Double", "Float",
-            "Integer", "Long", "Short", "Void",
-            // java.lang.*
-            "Object", "Class",
-            "String", "StringBuffer", "StringBuilder",
-            // Exceptions
-            "ArrayIndexOutOfBoundsException", "Exception",
-            "RuntimeException", "IllegalArgumentException",
-            "IllegalStateException", "IndexOutOfBoundsException",
-            "NullPointerException", "Throwable", "SecurityException",
-            "UnsupportedOperationException",
-            // java.util.*
-            "List", "ArrayList", "Deque", "Queue", "LinkedList",
-            "Set", "HashSet", "SortedSet", "TreeSet",
-            "Map", "HashMap", "SortedMap", "TreeMap",
-        }).collect(Collectors.toSet()));
+    private static final Set<String> DEFAULT_EXCLUDED_CLASSES = Set.of(
+        // reserved type name
+        "var",
+        // primitives
+        "boolean", "byte", "char", "double", "float", "int",
+        "long", "short", "void",
+        // wrappers
+        "Boolean", "Byte", "Character", "Double", "Float",
+        "Integer", "Long", "Short", "Void",
+        // java.lang.*
+        "Object", "Class",
+        "String", "StringBuffer", "StringBuilder",
+        // Exceptions
+        "ArrayIndexOutOfBoundsException", "Exception",
+        "RuntimeException", "IllegalArgumentException",
+        "IllegalStateException", "IndexOutOfBoundsException",
+        "NullPointerException", "Throwable", "SecurityException",
+        "UnsupportedOperationException",
+        // java.util.*
+        "List", "ArrayList", "Deque", "Queue", "LinkedList",
+        "Set", "HashSet", "SortedSet", "TreeSet",
+        "Map", "HashMap", "SortedMap", "TreeMap",
+        "Override", "Deprecated", "SafeVarargs", "SuppressWarnings", "FunctionalInterface",
+        "Collection", "EnumSet", "LinkedHashMap", "LinkedHashSet", "Optional",
+        "OptionalDouble", "OptionalInt", "OptionalLong",
+        // java.util.stream.*
+        "DoubleStream", "IntStream", "LongStream", "Stream"
+    );
 
     /** Package names to ignore. */
     private static final Set<String> DEFAULT_EXCLUDED_PACKAGES = Collections.emptySet();
 
-    /** User-configured regular expressions to ignore classes. */
+    /** Pattern to match brackets in a full type name. */
+    private static final Pattern BRACKET_PATTERN = Pattern.compile("\\[[^]]*]");
+
+    /** Specify user-configured regular expressions to ignore classes. */
     private final List<Pattern> excludeClassesRegexps = new ArrayList<>();
 
-    /** User-configured class names to ignore. */
+    /** A map of (imported class name -&gt; class name with package) pairs. */
+    private final Map<String, String> importedClassPackages = new HashMap<>();
+
+    /** Stack of class contexts. */
+    private final Deque<ClassContext> classesContexts = new ArrayDeque<>();
+
+    /** Specify user-configured class names to ignore. */
     private Set<String> excludedClasses = DEFAULT_EXCLUDED_CLASSES;
-    /** User-configured package names to ignore. */
+
+    /**
+     * Specify user-configured packages to ignore. All excluded packages
+     * should end with a period, so it also appends a dot to a package name.
+     */
     private Set<String> excludedPackages = DEFAULT_EXCLUDED_PACKAGES;
-    /** Allowed complexity. */
+
+    /** Specify the maximum threshold allowed. */
     private int max;
 
-    /** Current file context. */
-    private FileContext fileContext;
+    /** Current file package. */
+    private String packageName;
 
     /**
      * Creates new instance of the check.
+     *
      * @param defaultMax default value for allowed complexity.
      */
     protected AbstractClassCouplingCheck(int defaultMax) {
         max = defaultMax;
-        excludeClassesRegexps.add(CommonUtils.createPattern("^$"));
+        excludeClassesRegexps.add(CommonUtil.createPattern("^$"));
     }
 
     /**
      * Returns message key we use for log violations.
+     *
      * @return message key we use for log violations.
      */
     protected abstract String getLogMessageId();
@@ -111,15 +135,8 @@ public abstract class AbstractClassCouplingCheck extends AbstractCheck {
     }
 
     /**
-     * Returns allowed complexity.
-     * @return allowed complexity.
-     */
-    public final int getMax() {
-        return max;
-    }
-
-    /**
-     * Sets maximum allowed complexity.
+     * Setter to specify the maximum threshold allowed.
+     *
      * @param max allowed complexity.
      */
     public final void setMax(int max) {
@@ -127,47 +144,50 @@ public abstract class AbstractClassCouplingCheck extends AbstractCheck {
     }
 
     /**
-     * Sets user-excluded classes to ignore.
-     * @param excludedClasses the list of classes to ignore.
+     * Setter to specify user-configured class names to ignore.
+     *
+     * @param excludedClasses classes to ignore.
      */
     public final void setExcludedClasses(String... excludedClasses) {
-        this.excludedClasses =
-            Collections.unmodifiableSet(Arrays.stream(excludedClasses).collect(Collectors.toSet()));
+        this.excludedClasses = Set.of(excludedClasses);
     }
 
     /**
-     * Sets user-excluded regular expression of classes to ignore.
+     * Setter to specify user-configured regular expressions to ignore classes.
+     *
      * @param from array representing regular expressions of classes to ignore.
      */
     public void setExcludeClassesRegexps(String... from) {
-        excludeClassesRegexps.clear();
-        excludeClassesRegexps.addAll(Arrays.stream(from.clone())
-                .map(CommonUtils::createPattern)
-                .collect(Collectors.toSet()));
+        Arrays.stream(from)
+                .map(CommonUtil::createPattern)
+                .forEach(excludeClassesRegexps::add);
     }
 
     /**
-     * Sets user-excluded pakcages to ignore. All exlcuded packages should end with a period,
-     * so it also appends a dot to a package name.
-     * @param excludedPackages the list of packages to ignore.
+     * Setter to specify user-configured packages to ignore. All excluded packages
+     * should end with a period, so it also appends a dot to a package name.
+     *
+     * @param excludedPackages packages to ignore.
+     * @throws IllegalArgumentException if there are invalid identifiers among the packages.
      */
     public final void setExcludedPackages(String... excludedPackages) {
         final List<String> invalidIdentifiers = Arrays.stream(excludedPackages)
-            .filter(x -> !CommonUtils.isName(x))
+            .filter(Predicate.not(CommonUtil::isName))
             .collect(Collectors.toList());
         if (!invalidIdentifiers.isEmpty()) {
             throw new IllegalArgumentException(
-                "the following values are not valid identifiers: "
-                    + invalidIdentifiers.stream().collect(Collectors.joining(", ", "[", "]")));
+                "the following values are not valid identifiers: " + invalidIdentifiers);
         }
 
-        this.excludedPackages = Collections.unmodifiableSet(
-            Arrays.stream(excludedPackages).collect(Collectors.toSet()));
+        this.excludedPackages = Set.of(excludedPackages);
     }
 
     @Override
     public final void beginTree(DetailAST ast) {
-        fileContext = new FileContext();
+        importedClassPackages.clear();
+        classesContexts.clear();
+        classesContexts.push(new ClassContext("", null));
+        packageName = "";
     }
 
     @Override
@@ -177,22 +197,28 @@ public abstract class AbstractClassCouplingCheck extends AbstractCheck {
                 visitPackageDef(ast);
                 break;
             case TokenTypes.IMPORT:
-                fileContext.registerImport(ast);
+                registerImport(ast);
                 break;
             case TokenTypes.CLASS_DEF:
             case TokenTypes.INTERFACE_DEF:
             case TokenTypes.ANNOTATION_DEF:
             case TokenTypes.ENUM_DEF:
+            case TokenTypes.RECORD_DEF:
                 visitClassDef(ast);
                 break;
+            case TokenTypes.EXTENDS_CLAUSE:
+            case TokenTypes.IMPLEMENTS_CLAUSE:
             case TokenTypes.TYPE:
-                fileContext.visitType(ast);
+                visitType(ast);
                 break;
             case TokenTypes.LITERAL_NEW:
-                fileContext.visitLiteralNew(ast);
+                visitLiteralNew(ast);
                 break;
             case TokenTypes.LITERAL_THROWS:
-                fileContext.visitLiteralThrows(ast);
+                visitLiteralThrows(ast);
+                break;
+            case TokenTypes.ANNOTATION:
+                visitAnnotationType(ast);
                 break;
             default:
                 throw new IllegalArgumentException("Unknown type: " + ast);
@@ -201,177 +227,133 @@ public abstract class AbstractClassCouplingCheck extends AbstractCheck {
 
     @Override
     public void leaveToken(DetailAST ast) {
-        switch (ast.getType()) {
-            case TokenTypes.CLASS_DEF:
-            case TokenTypes.INTERFACE_DEF:
-            case TokenTypes.ANNOTATION_DEF:
-            case TokenTypes.ENUM_DEF:
-                leaveClassDef();
-                break;
-            default:
-                // Do nothing
+        if (TokenUtil.isTypeDeclaration(ast.getType())) {
+            leaveClassDef();
         }
     }
 
     /**
      * Stores package of current class we check.
+     *
      * @param pkg package definition.
      */
     private void visitPackageDef(DetailAST pkg) {
         final FullIdent ident = FullIdent.createFullIdent(pkg.getLastChild().getPreviousSibling());
-        fileContext.setPackageName(ident.getText());
+        packageName = ident.getText();
     }
 
     /**
      * Creates new context for a given class.
+     *
      * @param classDef class definition node.
      */
     private void visitClassDef(DetailAST classDef) {
         final String className = classDef.findFirstToken(TokenTypes.IDENT).getText();
-        fileContext.createNewClassContext(className, classDef.getLineNo(), classDef.getColumnNo());
+        createNewClassContext(className, classDef);
     }
 
     /** Restores previous context. */
     private void leaveClassDef() {
-        fileContext.checkCurrentClassAndRestorePrevious();
+        checkCurrentClassAndRestorePrevious();
     }
 
     /**
-     * Encapsulates information about classes coupling inside single file.
+     * Registers given import. This allows us to track imported classes.
+     *
+     * @param imp import definition.
      */
-    private class FileContext {
-        /** A map of (imported class name -> class name with package) pairs. */
-        private final Map<String, String> importedClassPackage = new HashMap<>();
+    private void registerImport(DetailAST imp) {
+        final FullIdent ident = FullIdent.createFullIdent(
+            imp.getLastChild().getPreviousSibling());
+        final String fullName = ident.getText();
+        final int lastDot = fullName.lastIndexOf(DOT);
+        importedClassPackages.put(fullName.substring(lastDot + 1), fullName);
+    }
 
-        /** Stack of class contexts. */
-        private final Deque<ClassContext> classesContexts = new ArrayDeque<>();
+    /**
+     * Creates new inner class context with given name and location.
+     *
+     * @param className The class name.
+     * @param ast The class ast.
+     */
+    private void createNewClassContext(String className, DetailAST ast) {
+        classesContexts.push(new ClassContext(className, ast));
+    }
 
-        /** Current file package. */
-        private String packageName = "";
+    /** Restores previous context. */
+    private void checkCurrentClassAndRestorePrevious() {
+        classesContexts.pop().checkCoupling();
+    }
 
-        /** Current context. */
-        private ClassContext classContext = new ClassContext(this, "", 0, 0);
+    /**
+     * Visits type token for the current class context.
+     *
+     * @param ast TYPE token.
+     */
+    private void visitType(DetailAST ast) {
+        classesContexts.peek().visitType(ast);
+    }
 
-        /**
-         * Retrieves current file package name.
-         * @return Package name.
-         */
-        public String getPackageName() {
-            return packageName;
-        }
+    /**
+     * Visits NEW token for the current class context.
+     *
+     * @param ast NEW token.
+     */
+    private void visitLiteralNew(DetailAST ast) {
+        classesContexts.peek().visitLiteralNew(ast);
+    }
 
-        /**
-         * Sets current context package name.
-         * @param packageName Package name to be set.
-         */
-        public void setPackageName(String packageName) {
-            this.packageName = packageName;
-        }
+    /**
+     * Visits THROWS token for the current class context.
+     *
+     * @param ast THROWS token.
+     */
+    private void visitLiteralThrows(DetailAST ast) {
+        classesContexts.peek().visitLiteralThrows(ast);
+    }
 
-        /**
-         * Registers given import. This allows us to track imported classes.
-         * @param imp import definition.
-         */
-        public void registerImport(DetailAST imp) {
-            final FullIdent ident = FullIdent.createFullIdent(
-                imp.getLastChild().getPreviousSibling());
-            final String fullName = ident.getText();
-            if (fullName.charAt(fullName.length() - 1) != '*') {
-                final int lastDot = fullName.lastIndexOf(DOT);
-                importedClassPackage.put(fullName.substring(lastDot + 1), fullName);
-            }
-        }
-
-        /**
-         * Retrieves class name with packages. Uses previously registered imports to
-         * get the full class name.
-         * @param className Class name to be retrieved.
-         * @return Class name with package name, if found, {@link Optional#empty()} otherwise.
-         */
-        public Optional<String> getClassNameWithPackage(String className) {
-            return Optional.ofNullable(importedClassPackage.get(className));
-        }
-
-        /**
-         * Creates new inner class context with given name and location.
-         * @param className The class name.
-         * @param lineNo The class line number.
-         * @param columnNo The class column number.
-         */
-        public void createNewClassContext(String className, int lineNo, int columnNo) {
-            classesContexts.push(classContext);
-            classContext = new ClassContext(this, className, lineNo, columnNo);
-        }
-
-        /** Restores previous context. */
-        public void checkCurrentClassAndRestorePrevious() {
-            classContext.checkCoupling();
-            classContext = classesContexts.pop();
-        }
-
-        /**
-         * Visits type token for the current class context.
-         * @param ast TYPE token.
-         */
-        public void visitType(DetailAST ast) {
-            classContext.visitType(ast);
-        }
-
-        /**
-         * Visits NEW token for the current class context.
-         * @param ast NEW token.
-         */
-        public void visitLiteralNew(DetailAST ast) {
-            classContext.visitLiteralNew(ast);
-        }
-
-        /**
-         * Visits THROWS token for the current class context.
-         * @param ast THROWS token.
-         */
-        public void visitLiteralThrows(DetailAST ast) {
-            classContext.visitLiteralThrows(ast);
-        }
+    /**
+     * Visit ANNOTATION literal and get its type to referenced classes of context.
+     *
+     * @param annotationAST Annotation ast.
+     */
+    private void visitAnnotationType(DetailAST annotationAST) {
+        final DetailAST children = annotationAST.getFirstChild();
+        final DetailAST type = children.getNextSibling();
+        classesContexts.peek().addReferencedClassName(type.getText());
     }
 
     /**
      * Encapsulates information about class coupling.
      *
-     * @author <a href="mailto:simon@redhillconsulting.com.au">Simon Harris</a>
-     * @author o_sukhodolsky
      */
-    private class ClassContext {
-        /** Parent file context. */
-        private final FileContext parentContext;
+    private final class ClassContext {
+
         /**
          * Set of referenced classes.
-         * Sorted by name for predictable error messages in unit tests.
+         * Sorted by name for predictable violation messages in unit tests.
          */
         private final Set<String> referencedClassNames = new TreeSet<>();
         /** Own class name. */
         private final String className;
         /* Location of own class. (Used to log violations) */
-        /** Line number of class definition. */
-        private final int lineNo;
-        /** Column number of class definition. */
-        private final int columnNo;
+        /** AST of class definition. */
+        private final DetailAST classAst;
 
         /**
          * Create new context associated with given class.
-         * @param parentContext Parent file context.
+         *
          * @param className name of the given class.
-         * @param lineNo line of class definition.
-         * @param columnNo column of class definition.
+         * @param ast ast of class definition.
          */
-        ClassContext(FileContext parentContext, String className, int lineNo, int columnNo) {
-            this.parentContext = parentContext;
+        private ClassContext(String className, DetailAST ast) {
             this.className = className;
-            this.lineNo = lineNo;
-            this.columnNo = columnNo;
+            classAst = ast;
         }
 
         /**
          * Visits throws clause and collects all exceptions we throw.
+         *
          * @param literalThrows throws to process.
          */
         public void visitLiteralThrows(DetailAST literalThrows) {
@@ -386,15 +368,25 @@ public abstract class AbstractClassCouplingCheck extends AbstractCheck {
 
         /**
          * Visits type.
+         *
          * @param ast type to process.
          */
         public void visitType(DetailAST ast) {
-            final String fullTypeName = CheckUtils.createFullType(ast).getText();
-            addReferencedClassName(fullTypeName);
+            DetailAST child = ast.getFirstChild();
+            while (child != null) {
+                if (TokenUtil.isOfType(child, TokenTypes.IDENT, TokenTypes.DOT)) {
+                    final String fullTypeName = FullIdent.createFullIdent(child).getText();
+                    final String trimmed = BRACKET_PATTERN
+                            .matcher(fullTypeName).replaceAll("");
+                    addReferencedClassName(trimmed);
+                }
+                child = child.getNextSibling();
+            }
         }
 
         /**
          * Visits NEW.
+         *
          * @param ast NEW to process.
          */
         public void visitLiteralNew(DetailAST ast) {
@@ -403,15 +395,19 @@ public abstract class AbstractClassCouplingCheck extends AbstractCheck {
 
         /**
          * Adds new referenced class.
+         *
          * @param ast a node which represents referenced class.
          */
         private void addReferencedClassName(DetailAST ast) {
             final String fullIdentName = FullIdent.createFullIdent(ast).getText();
-            addReferencedClassName(fullIdentName);
+            final String trimmed = BRACKET_PATTERN
+                    .matcher(fullIdentName).replaceAll("");
+            addReferencedClassName(trimmed);
         }
 
         /**
          * Adds new referenced class.
+         *
          * @param referencedClassName class name of the referenced class.
          */
         private void addReferencedClassName(String referencedClassName) {
@@ -423,53 +419,78 @@ public abstract class AbstractClassCouplingCheck extends AbstractCheck {
         /** Checks if coupling less than allowed or not. */
         public void checkCoupling() {
             referencedClassNames.remove(className);
-            referencedClassNames.remove(parentContext.getPackageName() + DOT + className);
+            referencedClassNames.remove(packageName + DOT + className);
 
             if (referencedClassNames.size() > max) {
-                log(lineNo, columnNo, getLogMessageId(),
-                        referencedClassNames.size(), getMax(),
+                log(classAst, getLogMessageId(),
+                        referencedClassNames.size(), max,
                         referencedClassNames.toString());
             }
         }
 
         /**
          * Checks if given class shouldn't be ignored and not from java.lang.
+         *
          * @param candidateClassName class to check.
          * @return true if we should count this class.
          */
         private boolean isSignificant(String candidateClassName) {
-            boolean result = !excludedClasses.contains(candidateClassName)
-                && !isFromExcludedPackage(candidateClassName);
-            if (result) {
-                for (Pattern pattern : excludeClassesRegexps) {
-                    if (pattern.matcher(candidateClassName).matches()) {
-                        result = false;
-                        break;
-                    }
-                }
-            }
-            return result;
+            return !excludedClasses.contains(candidateClassName)
+                && !isFromExcludedPackage(candidateClassName)
+                && !isExcludedClassRegexp(candidateClassName);
         }
 
         /**
          * Checks if given class should be ignored as it belongs to excluded package.
+         *
          * @param candidateClassName class to check
          * @return true if we should not count this class.
          */
         private boolean isFromExcludedPackage(String candidateClassName) {
             String classNameWithPackage = candidateClassName;
-            if (!candidateClassName.contains(DOT)) {
-                classNameWithPackage = parentContext.getClassNameWithPackage(candidateClassName)
+            if (candidateClassName.indexOf(DOT) == -1) {
+                classNameWithPackage = getClassNameWithPackage(candidateClassName)
                     .orElse("");
             }
             boolean isFromExcludedPackage = false;
-            if (classNameWithPackage.contains(DOT)) {
+            if (classNameWithPackage.indexOf(DOT) != -1) {
                 final int lastDotIndex = classNameWithPackage.lastIndexOf(DOT);
-                final String packageName = classNameWithPackage.substring(0, lastDotIndex);
-                isFromExcludedPackage = packageName.startsWith("java.lang")
-                    || excludedPackages.contains(packageName);
+                final String candidatePackageName =
+                    classNameWithPackage.substring(0, lastDotIndex);
+                isFromExcludedPackage = candidatePackageName.startsWith("java.lang")
+                    || excludedPackages.contains(candidatePackageName);
             }
             return isFromExcludedPackage;
         }
+
+        /**
+         * Retrieves class name with packages. Uses previously registered imports to
+         * get the full class name.
+         *
+         * @param examineClassName Class name to be retrieved.
+         * @return Class name with package name, if found, {@link Optional#empty()} otherwise.
+         */
+        private Optional<String> getClassNameWithPackage(String examineClassName) {
+            return Optional.ofNullable(importedClassPackages.get(examineClassName));
+        }
+
+        /**
+         * Checks if given class should be ignored as it belongs to excluded class regexp.
+         *
+         * @param candidateClassName class to check.
+         * @return true if we should not count this class.
+         */
+        private boolean isExcludedClassRegexp(String candidateClassName) {
+            boolean result = false;
+            for (Pattern pattern : excludeClassesRegexps) {
+                if (pattern.matcher(candidateClassName).matches()) {
+                    result = true;
+                    break;
+                }
+            }
+            return result;
+        }
+
     }
+
 }
